# MOOCDataTransformation

./: .gitignore  CMakeCache.txt  CMakeLists.txt  MOOCDataTransformation  Makefile  README.md  cmake_install.cmake  input.json
src/: BlockData.h  ColumnData.h  DataConfig.h  TabularData.cpp  TabularData.h  main.cpp
src/source/: JsonSource.cpp  JsonSource.h
